--- a/css/import.html
+++ b/css/import.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Imported style sheet</title>
     <style>
-        @import url("/examples/css/style.css");
+        @import url("/css/style.css");
         p {
             color: lightslategray;
             font-size: 16px;
