--- a/css/responsiveness.html
+++ b/css/responsiveness.html
@@ -14,10 +14,10 @@
          <p><strong>Note:</strong> Flexbox is not supported in Internet Explorer 10 or earlier versions.</p>
     <h1>Flexible Boxes</h1>
         <div class="flex-container">
-          <div><img src="../image/logo.png"></div>
-          <div><img src="../image/cake.jpg"></div>
-          <div><img src="../image/cup-cake.jpg"></div>  
-          <div><img src="../image/cookies.jpg"></div>
+          <div><img src="./image/logo.png"></div>
+          <div><img src="./image/cake.jpg"></div>
+          <div><img src="./image/cup-cake.jpg"></div>  
+          <div><img src="./image/cookies.jpg"></div>
         </div>
   </body>
 </html>
